--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>CSS Bear - How To Create A Bear With Just CSS</title>
   </head>
   <body>
     <div id="head"></div>
