--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <div id="mouth-vertical"></div>
     <div id="mouth-horizontal-left"></div>
     <div id="mouth-horizontal-right"></div>
-
+    <div id="tongue-base"></div>
+    <div id="tongue-crease"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
